--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.18.1",
     "nanoid": "^3.1.16",
     "nodemon": "^2.0.4",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "xss": "^1.0.8"
   }
 }
